@@ -57,9 +57,11 @@ public class TurtleBox extends JFrame implements DelayableDiagramController
     private double angle = -90;
     private Image image = (new ImageIcon(this.getClass().getResource("turtle.png"))).getImage();
     private boolean penDown = true;
-    private Color penColor = Color.BLACK;
     // START KGU#303 2016-12-02: Enh. #302
+    //private Color penColor = Color.BLACK;
+    private Color defaultPenColor = Color.BLACK;
     private Color backgroundColor = Color.WHITE;
+    private Color penColor = defaultPenColor;
     // END KGU#303 2016-12-02
     private boolean turtleHidden = false;
     private int delay = 10;
@@ -79,7 +81,10 @@ public class TurtleBox extends JFrame implements DelayableDiagramController
             g.setColor(backgroundColor);
             // END KGU#303 2016-12-02
             g.fillRect(0,0,getWidth(),getHeight());
-            g.setColor(Color.BLACK);
+            // START KGU#303 2016-12-03: Enh. #302
+            //g.setColor(Color.BLACK);
+            g.setColor(defaultPenColor);
+            // END KGU#303 2016-12-03
 
             // draw all elements
             for(Element ele : elements)
@@ -164,15 +169,38 @@ public class TurtleBox extends JFrame implements DelayableDiagramController
     public void setVisible(boolean visible)
     {
         super.setVisible(visible);
-        elements.clear();
-        angle=-90;
-        // START KGU#303 2016-12-02: Enh. #302
-        backgroundColor = Color.WHITE;
-        // END KGU#3032016-12-02
-        setPos(new Point(panel.getWidth()/2,panel.getHeight()/2));
+// START KGU#303 2016-12-03: Issue #302 - replaced by reinit() call below
+//        elements.clear();
+//        angle=-90;
+//        // START KGU#303 2016-12-02: Enh. #302
+//        backgroundColor = Color.WHITE;
+//        defaultPenColor = Color.BLACK;
+//        turtleHidden = false;
+//        // END KGU#3032016-12-02
+//        setPos(new Point(panel.getWidth()/2,panel.getHeight()/2));
+// END KGU#303 2016-12-03
         home = new Point(panel.getWidth()/2,panel.getHeight()/2);
+        // START KGU#303 2016-12-03: Issue #302 - replaces disabled code above
+        reinit();
+        // END KGU#303 2016-12-03
         paint(this.getGraphics());
     }
+    
+    // START KGU#303 2016-12-03: Issue #302
+    /**
+     * Undoes all possible impacts of a previous main diagram execution  
+     */
+    private void reinit()
+    {
+        elements.clear();
+        angle = -90;
+        backgroundColor = Color.WHITE;
+        defaultPenColor = Color.BLACK;
+        turtleHidden = false;
+        setPos(home.getLocation());
+        penDown();
+    }
+    // END KGU#303 2016-12-03
 
     private void delay()
     {
@@ -280,6 +308,18 @@ public class TurtleBox extends JFrame implements DelayableDiagramController
     public void setBackgroundColor(int red, int green, int blue)
     {
     	backgroundColor = new Color(Math.min(255, red), Math.min(255, green), Math.min(255, blue));
+    	delay();
+    }
+
+    public void setPenColor(Color penColor)
+    {
+    	defaultPenColor = penColor;
+    	panel.repaint();
+    }
+
+    public void setPenColor(int red, int green, int blue)
+    {
+    	defaultPenColor = new Color(Math.min(255, red), Math.min(255, green), Math.min(255, blue));
     	delay();
     }
     // END KGU#303 2016-12-02
@@ -419,7 +459,10 @@ public class TurtleBox extends JFrame implements DelayableDiagramController
     {
         if(color.equals(Color.WHITE))
         {
-            this.setColor(Color.BLACK);
+        	// START KGU#303 2016-12-03: Enh. #302
+            //this.setColor(Color.BLACK);
+            this.setColor(defaultPenColor);
+            // END KGU#303 2016-12-03
         }
         else this.setColor(color);
         return execute(message);
@@ -437,13 +480,20 @@ public class TurtleBox extends JFrame implements DelayableDiagramController
         if(name!=null)
         {
            if (name.equals("init")) {
-        	   elements.clear();
-        	   angle=-90;
-        	   // START KGU#303 2016-12-02: Enh. #302
-        	   backgroundColor = Color.WHITE;
-        	   // END KGU#3032016-12-02
-        	   setPos(home.getLocation());
-        	   penDown();
+// START KGU#303 2016-12-03: Issue #302 - replaced by reinit() call
+//        	   elements.clear();
+//        	   angle=-90;
+//        	   // START KGU#303 2016-12-02: Enh. #302
+//        	   backgroundColor = Color.WHITE;
+//        	   // END KGU#3032016-12-02
+//        	   // START KGU#303 2016-12-03: Enh. #302
+//        	   defaultPenColor = Color.BLACK;
+//        	   turtleHidden = false;
+//        	   // END KGU#3032016-12-03
+//        	   setPos(home.getLocation());
+//        	   penDown();
+        	   reinit();
+// END KGU#303 2016-12-03
         	   setAnimationDelay((int) param1);
            }
            // START #272 2016-10-16 (KGU): Now different types (to allow to study rounding behaviour)
@@ -469,6 +519,7 @@ public class TurtleBox extends JFrame implements DelayableDiagramController
            else if (name.equals("showturtle")) { showTurtle(); }
            // START KGU#303 2016-12-02: Enh. #302 - A procedure to set the backgroud colour was requested
            else if (name.equals("setbackground")) { setBackgroundColor((int)Math.abs(param1),(int)Math.abs(param2),(int)Math.abs(param3)); }
+           else if (name.equals("setpencolor")) { setPenColor((int)Math.abs(param1),(int)Math.abs(param2),(int)Math.abs(param3)); }
            // END KGU#303 2016-12-02
            else { res="Function <"+name+"> not implemented!"; }
         }
